[package]
name = "blog_server"
version = "0.1.0"
authors = ["sugerme <hanakazu8989@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.4.0", features = ["tls"] }
rocket_contrib = { version = "0.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
rocket_cors = "0.4.0"
